<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VS Weather App</string>
    <string name="cityName">City</string>
    <string name="temperature">Temperature</string>
    <string name="buttonChangeCity">Change city</string>
    <string name="buttonInfoAboutCity">Wikipedia about city</string>
    <string name="buttonSettings">Settings</string>
    <string name="cityChoice">Choose your city</string>
    <string name="InputCityName">Input city name</string>
    <string name="buttonMoscow">Moscow</string>
    <string name="buttonSpb">Saint-Petersburg</string>
    <string name="buttonEkaterinburg">Ekaterinburg</string>
    <string name="buttonNovosibirsk">Novosibirsk</string>
    <string name="buttonKhabarovsk">Khabarovsk</string>
    <string name="buttonDefineLocation">Define my current location</string>
    <string name="checkBoxWindSpeed">Wind speed</string>
    <string name="checkBoxPressure">Pressure</string>
    <string name="Settings">Settings</string>
    <string name="PreviousRequestsHistory">History of requests</string>
    <string name="UriMoscow">https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0</string>
    <string name="UriSpb">https://ru.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3</string>
    <string name="UriEkaterinburg">https://ru.wikipedia.org/wiki/%D0%95%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B1%D1%83%D1%80%D0%B3</string>
    <string name="UriNovosibirsk">https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D0%B8%D0%B1%D0%B8%D1%80%D1%81%D0%BA</string>
    <string name="UriKhabarovsk">https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%B1%D0%B0%D1%80%D0%BE%D0%B2%D1%81%D0%BA</string>
    <string name="aboutDeveloper">Info about developers</string>
    <string name="historyOfRequests">History of weather requests</string>
    <string name="title_main">Main</string>
    <string name="title_settings">Settings</string>

    <string name="drawer_menu_mainActivity">Main Activity</string>
    <string name="drawer_menu_cityChoiceActivity">City choice Activity</string>
    <string name="drawer_menu_settingsActivity">Settings Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VS Weather App</string>
    <string name="nav_header_subtitle">geekbrains.ru</string>

    <string name="title_dialog">Caution</string>
    <string name="dialog_positive_button">Ok</string>
    <string name="message_dialog">Connection error: VS Weather could not get actual information</string>

    <string name="date">Date</string>

    <string name="noNetwork_notificationTitle">VS NETWORK WARNING</string>
    <string name="noNetwork_notificationText">NETWORK IS OFF</string>
    <string name="lowBattery_notificationTitle">VS BATTERY WARNING</string>
    <string name="lowBattery_notificationText">BATTERY IS LOW</string>
    <string name="badWeatherWarning_notificationTitle">VS WEATHER WARNING</string>
    <string name="badWeatherWarning_notificationText">BE CAREFUL! DANGEROUS WEATHER CONDITIONS!</string>

    <string name="searchCity">Searching city</string>

</resources>