<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainActivity"
            android:icon="@drawable/ic_baseline_nav_main_activity"
            android:title="@string/drawer_menu_mainActivity" />
        <item
            android:id="@+id/nav_cityChoiceActivity"
            android:icon="@drawable/ic_baseline_nav_city_choice_activity"
            android:title="@string/drawer_menu_cityChoiceActivity" />
        <item
            android:id="@+id/nav_settingsActivity"
            android:icon="@drawable/ic_baseline_nav_settings_activity"
            android:title="@string/drawer_menu_settingsActivity" />
    </group>

</menu>