<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/HoRcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/item"
        app:layout_constraintEnd_toEndOf="@id/item"
        tools:text="Some city"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRcity"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/HoRtemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRcity"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        tools:text="some temperature"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPressure"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRtemperature"/>

    <TextView
        android:id="@+id/HoRpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRtemperature"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        tools:text="some pressure"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxWindSpeed"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRpressure"/>

    <TextView
        android:id="@+id/HoRwindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/HoRpressure"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        tools:text="some windSpeed"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>