<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A6BCD">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width= "match_parent"
            android:layout_height= "wrap_content"
            android:id="@+id/AppBarLayout"
            android:theme= "@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.Toolbar
                    android:id= "@+id/AppBarToolbar"
                    android:layout_width= "match_parent"
                    android:layout_height= "?attr/actionBarSize"
                    android:background= "?attr/colorPrimary"
                    app:popupTheme= "@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout >


        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="TODO"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle"
            app:srcCompat="@drawable/ic_baseline_wb_sunny_24"
            tools:srcCompat="@drawable/ic_baseline_wb_sunny_24" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#19D584"
            android:textColorHighlight="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AppBarLayout" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingTop="30dp"
            android:text="@string/cityName"
            android:textColor="#FF9800"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mainImage"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingTop="30dp"
            android:text="@string/temperature"
            android:textColor="#FF9800"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />

        <FrameLayout
            android:id="@+id/iconFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/pressure"
            app:layout_constraintEnd_toStartOf="@+id/temperature"
            app:layout_constraintStart_toEndOf="@+id/cityName"
            app:layout_constraintTop_toTopOf="@+id/mainImage">
                <ImageView
                    android:id="@+id/forecastIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toTopOf="@+id/pressure"
                    app:layout_constraintEnd_toStartOf="@+id/temperature"
                    app:layout_constraintStart_toEndOf="@+id/cityName"
                    app:layout_constraintTop_toTopOf="@+id/mainImage"
                    android:layout_marginBottom="20dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textColor="#00BCD4"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="#00BCD4"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/windSpeed"
            app:layout_constraintTop_toBottomOf="@+id/temperature" />

        <FrameLayout
            android:id="@+id/fragmentContainer1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/windSpeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"
            >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_Fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </androidx.recyclerview.widget.RecyclerView>

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="launchActivityCityChoice"
            android:text="@string/buttonChangeCity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInfoaboutCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/buttonInfoAboutCity"
            app:layout_constraintBottom_toBottomOf="@+id/buttonChangeCity"
            app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
            app:layout_constraintStart_toEndOf="@+id/buttonChangeCity"
            app:layout_constraintTop_toTopOf="@+id/buttonChangeCity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="launchSettingsActivity"
            android:text="@string/buttonSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonChangeCity" />

</androidx.constraintlayout.widget.ConstraintLayout>